--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
     <section id="about">
       <h2>About Me</h2>
-      <p>I am a dedicated and goal-oriented individual currently pursuing a Bachelor of Business Administration in Management Information Systems (MIS) from the University of Dhaka. My interests lie in the intersection of data, design, and business strategy, with a passion for machine learning, deep learning, data analysis and digital tools to drive innovation. Have knowledge on HTML, CSS, Python and React. I also have a knack on mobile photography and photo editing.</p>
+      <p>I am a dedicated and goal-oriented individual currently pursuing a Bachelor of Business Administration in Management Information Systems (MIS) from the University of Dhaka. My interests lie in the intersection of data,design and business strategy, with a passion for machine learning, deep learning, data analysis and digital tools to drive innovation.I have knowledge on HTML, CSS, Python and React. I also have a knack on mobile photography and photo editing.</p>
     </section>
 
     <section id="education">
